@@ -110,7 +110,7 @@ presets = {
             {type="item",       name="construction-robot",           quantity=1},
             {type="item",       name="production-science-pack",      quantity=1},
             {type="item",       name="utility-science-pack",         quantity=1},
-            {type="item",       name="se-cargo-rocket-section",      quantity=100},
+            {type="item",       name="se-rocket-launch-pad-silo-dummy-result-item", quantity=1},
             {type="technology", name="se-spaceship",                 quantity=1},
             {type="item",       name="se-vulcanite-block",           quantity=1},
             {type="item",       name="se-cryonite-rod",              quantity=1},
@@ -209,7 +209,7 @@ presets = {
             {type="item",       name="construction-robot",           quantity=1},
             {type="item",       name="production-science-pack",      quantity=1},
             {type="item",       name="utility-science-pack",         quantity=1},
-            {type="item",       name="se-cargo-rocket-section",      quantity=100},
+            {type="item",       name="se-rocket-launch-pad-silo-dummy-result-item", quantity=1},
             {type="technology", name="se-spaceship",                 quantity=1},
             {type="item",       name="se-vulcanite-block",           quantity=1},
             {type="item",       name="se-cryonite-rod",              quantity=1},
